Fix GitHub Pages base path

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  
+  "homepage": "https://brainproolympiad.github.io/competition",
+
   "name": "comp",
   "private": true,
   "version": "0.0.0",
