--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Environment files
+.env
+.env.*.local
+
 # Logs
 logs
 *.log
@@ -7,10 +11,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -23,4 +29,5 @@ dist-ssr
 *.sln
 *.sw?
 
+# Generated files
 /src/generated/prisma
