--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  
-  "homepage": "https://brainproolympiad.github.io/competition",
-
   "name": "comp",
+  "homepage": "https:/brainproolympiad.github.io/online-competition/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -20,6 +20,7 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tinymce/tinymce-react": "^4.3.2",
     "framer-motion": "^12.23.16",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
