--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,15 +8,15 @@
     "allowImportingTsExtensions": false,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,      // Vite handles the actual build
+    "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting & warnings */
-    "strict": true,
+    /* Turn off all warnings & checks */
     "skipLibCheck": true,
+    "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src"]
 }
